# greeny

./: .gitignore  CMakeLists.txt  Greeny.cpp  Greeny.hpp  README.md  test.cpp
detail/: Platform.hpp  RegistersBase.hpp  gcc_amd64.hpp  gcc_i386.hpp
